try resolve:  element is not visible because it has an effective width and height of: '0 x 0' pixels

--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 .meme-image {
   height: 500px;
-  width: 500px;
+  width: 600px;
   visibility: visible;
 }
 
@@ -10,7 +10,7 @@
   height: 500px;
   position: relative;
   text-align: center;
-  width: 500px;
+  width: 600px;
   top: 20px;
 }
 
